pod-with-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloud-institution-namespace-pod
  namespace: cloud-institution
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 81
  restartPolicy: Always
