pod-with-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secret-pod
spec:
  volumes:
    - name: secret-volume
      secret:
        secretName: database-credentials
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
