pv-pvc-pod-attachment.yaml

apiVersion: v1
kind: Pod
metadata:
  name: pvc-pod1111
spec:
  containers:
    - name: pvc-pod-container
      image: nginx:latest
      volumeMounts:
        - mountPath: /data
          name: data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: demo-pvc
