two-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: two-pods-nginx
spec:
  containers:
  - name: nginx1
    image: nginx:1.14.2
    ports:
    - containerPort: 81
  - name: nginx2
    image: nginx:1.14.2
    ports:
    - containerPort: 8080
