cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx   # Matches Pod label
  ports:
    - protocol: TCP
      port: 80       # Service Port
      targetPort: 80 # Pod containerPort
  type: ClusterIP    # Default service type
