external-name-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-external-service
spec:
  type: ExternalName
  externalName: cloudinstitution.com   # External DNS name
  ports:
    - port: 80
      protocol: TCP
