nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80         # Service port
      targetPort: 80   # Container port
      nodePort: 30081  # NodePort (range: 30000~@~S32767)
