service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-dns
spec:
  clusterIP: 10.43.1.10  # change the ip here 
  ports:
  - name: dns
    port: 53
    protocol: UDP
    targetPort: 53
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  type: ClusterIP
